--- a/assets/scss/molecules/_list-table.scss
+++ b/assets/scss/molecules/_list-table.scss
@@ -1647,6 +1647,9 @@ table.wp-list-table {
 			
 		}
 	}
+	.hidden {
+		display: none !important;
+	}
 }
 
 table.atum-list-table, .floatThead-container, .inbound-stock-list, table.wp-list-table  {
